# telco_customer_churn

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  pyproject.toml
.dvc/: config
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  task.md
.github/workflows/: ci.yml
data/: .gitignore  README.md
data/cleaned/: .gitignore
data/features/: .gitignore
data/inference/: .gitignore
data/raw_data/: .gitignore  customers.csv.dvc  test_data.csv.dvc
ds_template/: __init__.py  config.py
ds_template/data/: data_set.py
ds_template/dvc_steps/: do_inference.py  evaluate.py  featurize.py  split.py  train_model.py
ds_template/features/: __init__.py  feature.py  mock_feature.py
ds_template/inference/: inference.py
ds_template/models/: __init__.py  constant_model.py  trainable.py
dvc/: dvc.yaml  params.yaml
notebooks/: analysis.ipynb
scripts/: generate_dag.py
telco_customer_churn/: __init__.py
tests/: __init__.py  test_hello_world.py
